Add note about axle sleeve position in instructions

--- a/iteam/bot-flow-and-clean.html
+++ b/iteam/bot-flow-and-clean.html
@@ -35,6 +35,7 @@
       <li>拆卸前請先拔除電源。</li>
       <li>清潔葉輪時可使用軟毛牙刷輕刷，避免刮傷磁軸。</li>
       <li>重新組裝後確認密封圈位置正確。</li>
+      <li>注意軸套位置，不要遺失</li>
     </ul>
   </div>
 
