--- a/index.html
+++ b/index.html
@@ -215,13 +215,17 @@
   <!-- 🪷 頁尾 -->
   <footer>
     <p>© 2025 金魚養殖經驗交流分享社群 ｜ 內容:金魚養殖經驗交流分享社群眾群管們 ｜ 網頁製作：MLE</p>
-    <p>
-      👁️ 今日瀏覽：
-      <span id="today-count">載入中...</span> ｜ 
-      累積總訪問：
-      <span id="total-count">載入中...</span>
-    </p>
+  
+    <!-- hitwebcounter Code START -->
+    <div style="text-align: center; margin-top: 20px;">
+        <p style="margin-bottom: 0.3em;">👣 累積造訪人數：</p>
+        <a href="https://www.hitwebcounter.com" target="_blank">
+            <img src="https://hitwebcounter.com/counter/counter.php?page=20656961&style=0038&nbdigits=5&type=page&initCount=0" 
+                 title="Counter Widget" alt="Visit counter For Websites" border="0" />
+        </a>
+    </div>
   </footer>
+
 
    <!-- ⚙️ JS 控制 -->
   <script>
@@ -265,35 +269,6 @@
           });
         });
     }
-
-    // === 設定專屬識別名稱（請換成你的站名） ===
-    const SITE_KEY = "taiwangoldfish.github.io";
-
-    // === 取得今日日期（當作每日專屬 key） ===
-    const today = new Date().toISOString().split('T')[0];
-
-    // === 1️⃣ 累積總訪問數 ===
-    fetch(`https://api.countapi.xyz/hit/${SITE_KEY}_total`)
-      .then(res => res.json())
-      .then(res => {
-        document.getElementById("total-count").innerText =
-          res.value.toLocaleString();
-      })
-      .catch(() => {
-        document.getElementById("total-count").innerText = "無法取得";
-      });
-
-    // === 2️⃣ 今日瀏覽數（依日期區分，每天歸零） ===
-    fetch(`https://api.countapi.xyz/hit/${SITE_KEY}_${today}`)
-      .then(res => res.json())
-      .then(res => {
-        document.getElementById("today-count").innerText =
-          res.value.toLocaleString();
-      })
-      .catch(() => {
-        document.getElementById("today-count").innerText = "無法取得";
-      });
-  </script>
 
 </body>
 </html>
