--- a/index.html
+++ b/index.html
@@ -154,32 +154,19 @@
         </nav>
     </aside>
 
-  <!-- 🧾 主內容 -->
-  <main class="content" id="mainContent">
+<!-- 🧾 主內容 -->
+<main class="content" id="mainContent">
     <div class="card">
-      <h2>歡迎來到金魚養殖經驗交流分享</h2>
-      <p>金魚飼養的完整知識庫，從入門、日常操作、買魚檢疫，到飼料、設備、健康照護一應俱全。</p>
-    </div>
-
-    <!-- 💬 LINE 社群邀請 -->
+        <h2>歡迎來到金魚養殖經驗交流分享</h2>
+        <p>金魚飼養的完整知識庫，從入門、日常操作、買魚檢疫，到飼料、設備、健康照護一應俱全。</p>
+    </div> <!-- 💬 LINE 社群邀請 -->
     <section class="line-section">
-      <h2>📱 歡迎加入我們的 LINE 社群</h2>
-      <p>您已被邀請加入 <strong>「金魚養殖經驗交流分享」</strong>！<br>
-        點擊下方連結或掃描 QR Code 即可加入。</p>
-
-      <div style="text-align:center; margin:20px 0;">
-        <a href="https://line.me/ti/g2/VGWnjJWNVZgUaSvZPYEFN1Nqk8qtwR2N1ACmsA?utm_source=invitation&utm_medium=link_copy&utm_campaign=default"
-          target="_blank" class="join-btn">👉 點我加入 LINE 社群</a>
-      </div>
-
-      <div style="text-align:center;">
-        <img src="https://raw.githubusercontent.com/michael19980508/index/main/image//QrCode.jpg" alt="LINE 社群 QR Code"
-          style="max-width:200px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
-      </div>
+        <h2>📱 歡迎加入我們的 LINE 社群</h2>
+        <p>您已被邀請加入 <strong>「金魚養殖經驗交流分享」</strong>！<br> 點擊下方連結或掃描 QR Code 即可加入。</p>
+        <div style="text-align:center; margin:20px 0;"> <a href="https://line.me/ti/g2/VGWnjJWNVZgUaSvZPYEFN1Nqk8qtwR2N1ACmsA?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" target="_blank" class="join-btn">👉 點我加入 LINE 社群</a> </div>
+        <div style="text-align:center;"> <img src="https://raw.githubusercontent.com/michael19980508/index/main/image//QrCode.jpg" alt="LINE 社群 QR Code" style="max-width:200px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.25);"> </div>
     </section>
-
-  </main>
-
+</main> <!-- 🪷 頁尾 -->
   <!-- 🪷 頁尾 -->
   <footer>
     <p>© 2025 金魚養殖經驗交流分享社群 ｜ 內容:金魚養殖經驗交流分享社群眾群管們 ｜ 網頁製作：MLE</p>
@@ -192,51 +179,12 @@
         </a>
     </div>
   </footer>
-
-
-   <!-- ⚙️ JS 控制 -->
-  <script>
-    // 📱 手機選單開關
-    const toggleBtn = document.getElementById('menuToggle');
-    const sidebar = document.getElementById('sidebar');
-    toggleBtn.addEventListener('click', () => {
-      sidebar.classList.toggle('active');
-    });
-
-    // 📄 載入子頁面 + 高亮選單
-    function loadPage(page, el) {
-      fetch(page)
-        .then(response => {
-          if (!response.ok) throw new Error("載入失敗");
-          return response.text();
-        })
-        .then(html => {
-          document.getElementById('mainContent').innerHTML = html;
-          sidebar.classList.remove('active');
-          window.scrollTo({ top: 0, behavior: 'smooth' });
-
-          document.querySelectorAll('.sidebar a.active')
-                  .forEach(a => a.classList.remove('active'));
-
-          if (el) el.classList.add('active');
-        })
-        .catch(() => {
-          document.getElementById('mainContent').innerHTML =
-            "<p>❌ 子頁面載入失敗，請稍後再試。</p>";
-        });
-    }
-
-    // ⭐ 只有首頁才啟用「分類下拉」
-    if (document.body.classList.contains("home")) {
-      document.querySelectorAll('.sidebar nav li > span')
-        .forEach(span => {
-          span.addEventListener('click', () => {
-            const parentLi = span.parentElement;
-            parentLi.classList.toggle('open');
-          });
-        });
-    }
-  </script>
+<script>
+    // 📱 手機選單開關 const toggleBtn = document.getElementById('menuToggle'); const sidebar = document.getElementById('sidebar'); toggleBtn.addEventListener('click', () => { sidebar.classList.toggle('active'); }); // 📄 載入子頁面 + 高亮選單 function loadPage(page, el) { fetch(page) .then(response => { if (!response.ok) throw new Error("載入失敗"); return response.text(); }) .then(html => { document.getElementById('mainContent').innerHTML = html; sidebar.classList.remove('active'); window.scrollTo({ top: 0, behavior: 'smooth' }); document.querySelectorAll('.sidebar a.active').forEach(a => a.classList.remove('active')); if (el) el.classList.add('active'); }) .catch(() => { document.getElementById('mainContent').innerHTML = "<p>❌ 子頁面載入失敗，請稍後再試。</p>"; }); } // ⭐ 只有首頁才啟用「分類下拉」 // ⭐ 只有首頁啟用下拉 if (document.body.classList.contains("home")) { document.querySelectorAll('.sidebar nav li > span').forEach(span => { span.addEventListener('click', () => { const parentLi = span.parentElement; parentLi.classList.toggle('open'); }); }); } // === 設定專屬識別名稱（請換成你的站名） === const SITE_KEY = "taiwangoldfish.github.io"; // === 取得今日日期（當作每日專屬 key） === const today = new Date().toISOString().split('T')[0]; // 例如 2025-11-17 // === 1️⃣ 累積總訪問數 === fetch(https://api.countapi.xyz/hit/${SITE_KEY}_total) .then(res => res.json()) .then(res => { document.getElementById("total-count").innerText = res.value.toLocaleString(); }) .catch(() => { document.getElementById("total-count").innerText = "無法取得"; }); // === 2️⃣ 今日瀏覽數（依日期區分，每天歸零） === fetch(https://api.countapi.xyz/hit/${SITE_KEY}_${today}) .then(res => res.json()) .then(res => { document.getElementById("today-count").innerText = res.value.toLocaleString(); }) .catch(() => { document.getElementById("today-count").innerText = "無法取得"; }); 
+</script>
 </body>
+
 </html>
+
+
 
