--- a/simple/freshman_need.html
+++ b/simple/freshman_need.html
@@ -212,6 +212,19 @@
     </div>
   </div>
 
+    <!-- 🎥 新手必看影片 17 -->
+  <div class="video-block">
+    <h3 class="video-title">🎥 新手必看影片 17</h3>
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/6n_JnmBGkts"
+              title="YouTube Shorts video"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+  
 </div>
 
 <!-- ===== 影片區塊樣式 ===== -->
